# npcs-in-css

./: .gitignore  CMakeLists.txt  command.cpp  extension.cpp  extension.h  monster.cstrike.games.txt  patch.cpp  sign_func.cpp  sign_func.h  stripper.cfg
CDetour/: detours.h
CEntity/: CECollisionProperty.cpp  CECollisionProperty.h  CE_Define.h  CE_recipientfilter.cpp  CE_recipientfilter.h  CEntity.cpp  CEntity.h  CEntityBase.cpp  CEntityBase.h  CEntityManager.cpp  CEntityManager.h  CTakeDamageInfo.cpp  CTakeDamageInfo.h  EntityOutput.cpp  EntityOutput.h  GameSystem.cpp  GameSystem.h  IEntityFactory.h  cutil.cpp  cutil.h  gamemovement.h  macros.h  physics.cpp  physics.h  physics_impact_damage.cpp  rtti.cpp  rtti.h  variant_t.h  vehicles.h  vtablehook.cpp  vtablehook.h
CEntity/AI/: CAI_Behavior.h  CAI_Blended_Movement.cpp  CAI_Blended_Movement.h  CAI_Criteria.cpp  CAI_Criteria.h  CAI_Default.cpp  CAI_HULL.cpp  CAI_Hint.cpp  CAI_Hint.h  CAI_Initutils.h  CAI_Interactions.h  CAI_Interest_Target.cpp  CAI_Link.cpp  CAI_Link.h  CAI_LocalIdSpace.cpp  CAI_Memory.cpp  CAI_Memory.h  CAI_Motor.cpp  CAI_Moveprobe.cpp  CAI_Moveshoot.cpp  CAI_Movesolver.cpp  CAI_Navigator.cpp  CAI_Navigator.h  CAI_Network.cpp  CAI_Network.h  CAI_NetworkManager.cpp  CAI_NetworkManager.h  CAI_Node.cpp  CAI_Node.h  CAI_ResponseSystem.cpp  CAI_ResponseSystem.h  CAI_Route.cpp  CAI_Route.h  CAI_Schedule.cpp  CAI_Sentence.cpp  CAI_Sentence.h  CAI_Squad.cpp  CAI_Squad.h  CAI_baseactor.cpp  CAI_baseactor.h  (+59 more)
CEntity/Class/: CAI_FollowGoal_Fix.cpp  CAI_FollowGoal_Fix.h  CAI_NPC.cpp  CAI_NPC.h  CAI_NPC_AI_Patch.cpp  CAI_NPC_AI_Patch.h  CAI_relationship.cpp  CAnimating.cpp  CAnimating.h  CAnimatingOverlay.cpp  CAnimatingOverlay.h  CBeam.cpp  CBeam.h  CBoneFollower.cpp  CBoneFollower.h  CBreakable.cpp  CBreakable.h  CBreakableProp.cpp  CBreakableProp.h  CCombatCharacter.cpp  CCombatCharacter.h  CCombatWeapon.cpp  CCombatWeapon.h  CCommand.cpp  CCommand.h  CCycler_Fix.cpp  CCycler_Fix.h  CDoor.cpp  CDoor.h  CDynamicLink.cpp  CDynamicLink.h  CDynamicProp.cpp  CDynamicProp.h  CEAI_ScriptedSequence.cpp  CEAI_ScriptedSequence.h  CESoundEnt.cpp  CESoundEnt.h  CEntityBlocker.cpp  CEntityBlocker.h  CEntityFlame.cpp  (+80 more)
CEntity/modify/: ai_activity.h  ai_waypoint.h  collisionproperty.h  datamap.h  effect_dispatch_data.h  eventlist.h  fourwheelvehiclephysics.cpp  fourwheelvehiclephysics.h  mempool.cpp  mempool.h  networkvar.h  npcevent.h  physics_collisionevent.h  playerlocaldata.h  playernet_vars.h  ragdoll_shared.h  sceneentity.h  sceneentity_shared.h  shareddefs.h  shot_manipulator.h  simtimer.cpp  simtimer.h  takedamageinfo.h  usercmd.h  vehicle_viewblend_shared.cpp  vehicle_viewblend_shared.h
CEntity/stuff/: TemplateEntities.cpp  TemplateEntities.h  ammodef.cpp  animation.cpp  bone_setup.cpp  effects.cpp  effects.h  eventqueue.cpp  eventqueue.h  globalstate.cpp  globalstate.h  stringregistry.cpp  stringregistry.h  studio.cpp
Custom/: cblast.cpp  combine_mine.cpp  combine_mine.h  env_flare.cpp  env_flare.h  env_headcrabcanister.cpp  env_headcrabcanister_shared.cpp  env_headcrabcanister_shared.h  func_tank.cpp  func_tank.h  grenade_beam.cpp  grenade_beam.h  grenade_frag.cpp  grenade_frag.h  grenade_spit.cpp  grenade_spit.h  item_ammo.cpp  item_ammo.h  item_ammo_crate.cpp  item_battery.cpp  item_healthkit.cpp  item_healthkit.h  item_recharge.cpp  ladder.cpp  ladder.h  pcs.cpp  pcs.h  pickup.cpp  pickup.h  player_pickup.cpp  player_pickup.h  prop_combine_ball.cpp  prop_combine_ball.h  prop_thumper.cpp  triggers.cpp  vehicle_base.cpp  vehicle_base.h  vehicle_jeep.cpp  vehicle_jeep.h  vehicle_prisoner_pod.cpp  (+17 more)
Monster/: antlion_maker.cpp  antlion_maker.h  cbasehelicopter.cpp  cbasehelicopter.h  maprules.cpp  monstermaker.cpp  monstermaker.h  npc_PoisonZombie.cpp  npc_antlion.cpp  npc_antlion.h  npc_antlionguard.cpp  npc_attackchopper.cpp  npc_attackchopper.h  npc_barnacle.cpp  npc_barnacle.h  npc_barnacle_old.cpp  npc_barnacle_old.h  npc_basescanner.cpp  npc_basescanner.h  npc_basezombie.cpp  npc_basezombie.h  npc_bullseye.cpp  npc_bullseye.h  npc_combine.cpp  npc_combine.h  npc_combinedropship.cpp  npc_combinegunship.cpp  npc_combines.cpp  npc_combines.h  npc_crow.cpp  npc_crow.h  npc_enemyfinder.cpp  npc_fastzombie.cpp  npc_headcrab.cpp  npc_headcrab.h  npc_houndeye.cpp  npc_houndeye.h  npc_manhack.cpp  npc_manhack.h  npc_metropolice.cpp  (+18 more)
SM/: CustomNpcManager.cpp  CustomNpcManager.h  natives.cpp  npc_custom.cpp  npc_custom.h  npc_test.sp
_game_server_files/configs/monster/: downloads.txt
_game_server_files/plugins/: monster_core.smx  monster_hpbar.smx
_game_server_files/plugins/disabled/: nearby_entity_list.smx
_game_server_files/scripting/: monster_core.sp  monster_hpbar.sp
_game_server_files/scripting/include/: monster.inc
asm/: asm.c
msvc/: sdk.sln  sdk.vcxproj  sdk.vcxproj.filters
scripting/: nearby_entity_list.sp
sdk/: smsdk_config.h  smsdk_ext.cpp  smsdk_ext.h
